# cc

./: .dockerignore  .env.deploy.example  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  BACKEND_COMPARISON.md  CLAUDE.md  DEPLOY_BACKEND.md  DEPLOY_FRONTEND.md  Dockerfile  README.markdown  RUST_DEPLOYMENT.md  RUST_MIGRATION_SUMMARY.md  SOLID_PRINCIPLES.md  agent-manifest.json  ecosystem.config.cjs  eslint.config.js  first.md  fly.toml  index.html  jest.config.js  jest.setup.js  manifest.json  nixpacks.toml  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  railway.toml  sitemap.xml  tailwind.config.js  vite.config.js
.claude/: settings.json
.github/: copilot-instructions.md
app/: README.markdown  index.html  package-lock.json  package.json  vite.config.js
assets/: Agents-Db4HQdTl.js  Game-CbFcecC_.js  Lobby-CTkqU9Yj.js  index-CMCSN596.css  index-Dn-BI8eM.js  index-xvHxVh2m.js  socket-CG3FGGt0.js  ui-BZCaKo2E.js  useSocketGame-CBcNe75a.js  vendor-Cv4JD_Zf.js  voice-6J5zzCyn.js  walkthrough-DVB3MwY_.js
public/: 404.html  llms.txt  manifest.json  robots.txt
scripts/: agent-play.mjs  deploy-backend.sh  (+2 more)
server-rust/: .gitignore  Cargo.toml  Dockerfile  README.md
server-rust/src/: lib.rs  main.rs
server-rust/src/config/: app_config.rs
server-rust/src/handlers/: mod.rs  socket_handlers.rs
server-rust/src/models/: feedback.rs  game.rs  lobby.rs  mod.rs  room.rs
server-rust/src/services/: code_generator.rs  feedback_service.rs  google_sheets.rs  lobby_manager.rs  mod.rs  room_manager.rs
server-rust/src/utils/: error.rs
(+147 files in other folders)
