[package]
name = "crisscross-server"
version = "0.1.0"
edition = "2021"
default-run = "crisscross-server"

[[bin]]
name = "crisscross-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }

# WebSocket support
socketioxide = { version = "0.14", features = ["state"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Google Sheets API - Optional for now
# google-sheets4 = "5"
# yup-oauth2 = "10"
# hyper = "0.14"
# hyper-rustls = "0.25"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
thiserror = "2"
async-trait = "0.1"

# Environment/Config
envy = "0.4"

[dev-dependencies]
tokio-test = "0.4"
